# promabbix

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  sync-to-promabbix-prd.md
.github/workflows/: ci.yml  container-release.yml  pypi-publish.yml
demo/: minikube-deployments.yaml
examples/: minikube-alert-config.yaml
src/promabbix/: __init__.py  promabbix.py
src/promabbix/cli/: __init__.py  generate_template.py
src/promabbix/core/: data_utils.py  fs_utils.py  migration.py  template.py  validation.py
src/promabbix/schemas/: unified.json  unified.yaml
src/promabbix/templates/: prometheus_alert_rules_to_zbx_template.j2
tests/: README.md  conftest.py  test_cli_generate_template.py  test_cli_validation_integration.py  test_config_without_wiki.py  test_data_utils.py  test_fs_utils.py  test_fs_utils_coverage.py  test_migration_coverage.py  test_promabbix_app.py  test_promabbix_coverage.py  test_schema_examples.py  test_template.py  test_template_basic.py  test_template_coverage.py  test_unified_format_file_processing.py  test_validation.py  test_validation_coverage.py  test_validation_simple_coverage.py  test_validation_wiki_optional.py
