[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promabbix"
dynamic = ["version"]
description = "Tool for connecting Prometheus to Zabbix monitoring"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Wrike Inc.", email = "david.pech@team.wrike.com"}
]
maintainers = [
    {name = "Wrike Inc.", email = "david.pech@team.wrike.com"}
]
keywords = ["prometheus", "zabbix", "monitoring", "alerting", "devops"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Environment :: Console",
]
requires-python = ">=3.11"
dependencies = [
    "ansible-core==2.18.6",
    "Jinja2==3.1.6",
    "jsonschema==4.23.0",
    "PyYAML==6.0.2",
    "rich==14.0.0",
    "rich-argparse==1.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/wrike/promabbix"
Repository = "https://github.com/wrike/promabbix.git"
Issues = "https://github.com/wrike/promabbix/issues"
Documentation = "https://github.com/wrike/promabbix#readme"

[project.scripts]
promabbix = "promabbix.promabbix:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
promabbix = ["templates/*.j2", "schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/promabbix"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.setuptools_scm]
write_to = "src/promabbix/_version.py"
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.flake8]
max-line-length = 127
max-complexity = 10
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    ".venv",
    "venv",
    ".pytest_cache",
]